# wolfstitch-cloud-dev

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  env_example.sh  env_example_railway.sh  main.py  nixpacks.toml  pyproject.toml  requirements-backup.txt  requirements.txt  setup.bat  setup_railway.py  structure.txt
backend/: batch_processing.py  config.py  database.py  dependencies.py  main.bak.py  main.py  requirements.txt
backend/api/: auth.py  billing.py  downloads.py  files.py  processing.py  users.py
backend/models/: schemas.py
backend/services/: database.py  enhanced_processor.py  export_service.py  file_service.py  processing_service.py  rate_limiter.py  redis_service.txt  result_storage.py  storage_service.py
docs/: cloud_repo_structure.md  wolfstitch_cloud_roadmap.md
frontend/: .eslintrc.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  Logo.tsx
frontend/src/lib/: feature-flags.ts  file-utils.ts
frontend/src/types/: types.ts
frontend/src/utils/: apiClient.ts  apiDataNormalizer.ts  fileValidator.ts  index.ts
frontend/types/: global.d.ts
tests/unit/: fix_null_bytes.py  quick_debug.py  quick_fix_py.py  test_fixes.py
wolfcore/: __init__.py  chunker.py  cleaner.py  exceptions.py  parsers.py  processor.py
wolfcore/tests/: __init__.py  test_chunker.py  test_cleaner.py  test_parsers.py  test_processor_enhanced.py
