[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wolfstitch-cloud"
version = "1.0.0"
description = "AI Dataset Preparation Platform - Cloud Native"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pypdf>=3.17.1",
    "python-docx>=1.1.0",
    "pdfminer.six>=20231228",
    "beautifulsoup4>=4.12.2",
    "openpyxl>=3.1.2",
    "lxml>=4.9.3",
    "chardet>=5.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]
production = [
    "psycopg2-binary>=2.9.7",
    "redis>=4.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wolfcore*", "backend*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]